Fix for signature's being cut off
Expanded canvas element being captured to prevent 'large looping' characters from being cut off. Adding padding.

--- a/src/components/SignatureModal/TextSignature/TextSignature.scss
+++ b/src/components/SignatureModal/TextSignature/TextSignature.scss
@@ -56,6 +56,7 @@ $border-radius: 4px;
 
     &.active {
       border: 1px solid #0088e7;
+      padding-left: 7px;
     }
   }
 }
